Add jacoco to core-authentication